--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "export": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
-  },
-  "devDependencies": {
-    "eslint": "^9",
-    "eslint-config-next": "16.1.6"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   }
 }
+
